--- a/FIT5032_MyCSS_Studio2/Views/Home/Index.cshtml
+++ b/FIT5032_MyCSS_Studio2/Views/Home/Index.cshtml
@@ -8,6 +8,48 @@
         <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
         <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
     </section>
+    
+    <table class="table table-hover">
+        <thead>
+            <tr class="table-success">
+                <th scope="col"></th>
+                <th scope="col">Details</th>
+                <th scope="col">Link</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="table-danger">
+                <th scope="row">Getting started</th>
+                <td>ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites</td>
+                <td>
+                    <button class="btn btn-outline-dark"
+                            href="https://go.microsoft.com/fwlink/?LinkId=301865">
+                        Learn more &raquo;
+                    </button>
+                </td>
+            </tr>
+            <tr class="table-warning">
+                <th scope="row">Get more libraries</th>
+                <td>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries</td>
+                <td>
+                    <button class="btn btn-outline-dark"
+                            href="https://go.microsoft.com/fwlink/?LinkId=301866">
+                        Learn more &raquo;
+                    </button>
+                </td>
+            </tr>
+            <tr class="table-info">
+                <th scope="row">Web Hosting</th>
+                <td>You can easily find a web hosting company that offers the right mix of features</td>
+                <td>
+                    <button class="btn btn-outline-dark"
+                            href="https://go.microsoft.com/fwlink/?LinkId=301867">
+                        Learn more &raquo;
+                    </button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 
     <div class="row">
         <section class="col-md-4" aria-labelledby="gettingStartedTitle">
